--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,11 @@ DB_USER=
 DB_PASSWORD=
 DB_NAME=
 DB_SSLMODE=
+
+# S3 Storage
+S3_REGION=
+S3_ENDPOINT=
+S3_ACCESS_KEY_ID=
+S3_SECRET_ACCESS_KEY=
+S3_BUCKET=
+S3_FORCE_PATH_STYLE=
