--- a/.env.example
+++ b/.env.example
@@ -1,26 +1,31 @@
-# App
-APP_ENV=
-APP_PORT=
-APP_VERSION=
+# Configuração da Aplicação
+APP_PORT=8080
+APP_ENV=dev
+APP_VERSION=0.1.0
 
-# JWT (dev only; troque em produção)
-JWT_ACCESS_TTL_MINUTES=
-JWT_REFRESH_TTL_DAYS=
-JWT_ACCESS_SECRET=
-JWT_REFRESH_SECRET=
+# JWT Secrets
+JWT_ACCESS_SECRET=dev-access-secret-change-in-production
+JWT_REFRESH_SECRET=dev-refresh-secret-change-in-production
+JWT_ACCESS_TTL_MINUTES=15
+JWT_REFRESH_TTL_DAYS=14
 
-# Database (Postgres)
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_SSLMODE=
+# Banco de Dados PostgreSQL
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=app
+DB_PASSWORD=app
+DB_NAME=vergo
+DB_SSLMODE=disable
 
-# S3 Storage
-S3_REGION=
-S3_ENDPOINT=
-S3_ACCESS_KEY_ID=
-S3_SECRET_ACCESS_KEY=
-S3_BUCKET=
-S3_FORCE_PATH_STYLE=
+# S3 / Storage (MinIO ou AWS)
+S3_REGION=us-east-1
+S3_BUCKET=vergo-storage
+S3_ENDPOINT=http://localhost:9000
+S3_FORCE_PATH_STYLE=true
+S3_ACCESS_KEY_ID=minioadmin
+S3_SECRET_ACCESS_KEY=minioadmin
+# AWS_SESSION_TOKEN=  # opcional para credenciais temporárias
+
+# Storage Policy
+STORAGE_ALLOWED_TYPES=image/jpeg,image/png,image/gif,application/pdf
+STORAGE_MAX_MB=25
